# aruco

./: .gitignore  CMakeLists.txt  ChangeLog
cmake/: arucoConfig-debug.cmake  arucoConfig-release.cmake  arucoConfig.cmake.in  compilerOptions.cmake  config.cmake.in  findDependencies.cmake  generateDoc.cmake  installOptions.cmake  options.cmake  printInfo.cmake
src/: CMakeLists.txt  cameraparameters.cpp  cameraparameters.h  checkrectcontour.cpp  checkrectcontour.h  cvdrawingutils.cpp  cvdrawingutils.h  dictionary.cpp  dictionary.h  ippe.cpp  marker.cpp  marker.h  markerdetector.cpp  markerdetector.h  markerlabeler.cpp  markerlabeler.h  markermap.cpp  markermap.h  posetracker.cpp  posetracker.h
src/markerlabelers/: dictionary_based.cpp
tests/: CMakeLists.txt  create_artag_hrm_dict.cpp  extract_chilitag_dict.cpp  highlyreliablemarkers.cpp  image2contourfile.cpp  mset2dict.cpp
utils/: CMakeLists.txt  aruco_test.cpp
utils_calibration/: CMakeLists.txt  aruco_calibration.cpp  aruco_calibration_fromimages.cpp
utils_markermap/: CMakeLists.txt  aruco_create_markermap.cpp  aruco_markermap_pix2meters.cpp  aruco_simple_markermap.cpp  aruco_test_markermap.cpp  pcdwriter.cpp
